alignment fixed

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -223,6 +223,7 @@ padding: 0px 30px;
   font-weight: 600;
   float: left;
   margin: 15px 0 0 0;
+  width: calc(100% - 200px);
 }
 .newsdate {
   float: right;
